--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
+    "axios": "^1.5.0",
+    "cnpm": "^9.2.0",
     "element-plus": "^2.3.14",
-    "vue-router": "^4.2.4"
+    "spark-md5": "^3.0.2",
+    "vue-router": "^4.2.4",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.1",
