--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
     "axios": "^1.5.0",
-    "cnpm": "^9.2.0",
+    "electron-store": "^8.1.0",
     "element-plus": "^2.3.14",
     "spark-md5": "^3.0.2",
     "vue-router": "^4.2.4",
@@ -38,6 +38,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "less": "^4.2.0",
     "prettier": "^3.0.2",
+    "unplugin-auto-import": "^0.16.6",
     "vite": "^4.4.9",
     "vue": "^3.3.4"
   }
