--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.5.0",
     "electron-store": "^8.1.0",
     "element-plus": "^2.3.14",
+    "mitt": "^3.0.1",
     "spark-md5": "^3.0.2",
     "vue-router": "^4.2.4",
     "worker-loader": "^3.0.8"
